<resources>
    <string name="app_name">ChanWeiXiong</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="ic_no">IC No</string>
    <string name="yearsOld">Years Old</string>
    <string name="status">Status</string>
    <string name="no_record">no_record</string>
    <string name="empty_not_saved">Record not save</string>
    <string name="save">Save</string>
    <string name="fee">Fee</string>
    <string-array name="years">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>8</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="statusName">
        <item>Normal</item>
        <item>Disabled</item>
    </string-array>
</resources>
